# rust_quickstart

./: Cargo.toml
src/: create.rs  main.rs
