[package]
name = "rust_quickstart"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section 能够在 Rust 结构和 BSON 数据之间进行序列化和反序列化
futures-util = "0.3" # 启用StreamExt能力
